Fixed social link buttons overlap

--- a/frontend/src/containers/Footer/Footer.scss
+++ b/frontend/src/containers/Footer/Footer.scss
@@ -11,19 +11,26 @@
 }
 
 .app__footer-social {
-    padding: 2rem 0.5rem;
+    display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 1rem;
     cursor: pointer;
 
     a {
-        height: 100%;
-        width: 10px;
         padding: 0.5rem 0.8rem;
-        margin: 1rem 0.7rem;
-        color: white;
+        margin: 0.5rem 0.5rem;
+        color: var(--white-color);
         text-decoration: none;
         border: 1px;
         border-color: var(--white-color);
         border-style: solid;
-        border-radius: 10px;
+        border-radius: 6px;
+        transition: all 0.1s ease-in-out;
+
+        &:hover {
+            color: var(--bg-dark);
+            background-color: var(--white-color);
+        }
     }
 }
