--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,7 +10,7 @@
   --gray-color: #6b7688;
   --brown-color: #46364a;
   --white-color: #ffffff;
-  --bg-dark: #343a40;
+  --bg-dark: #23282c;
 }
 
 * {
